test/scc/type/semantic-errors/007.t
union
{
    int a;
    union
    {
        int b;
        int c[];
    };
};